force-app/main/default/objects/Zco_Integration_Setting__mdt/Zco_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Zco Integration Setting</label>
    <pluralLabel>Zco Integration Settings</pluralLabel>
</CustomObject>