force-app/main/default/objects/Zco_Integration_Setting__mdt/fields/Base_Path__c.field-meta.xml
<CustomField>
    <fullName>Base_Path__c</fullName>
    <label>Base Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>