force-app/main/default/objects/Zco_Integration_Setting__mdt/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>