force-app/main/default/objects/Zco_Integration_Setting__mdt/fields/Webhook_Secret_Name__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret_Name__c</fullName>
    <label>Webhook Secret Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>